# chess-ai

./: .flake8  .gitignore  README.md  pyproject.toml
checkpoints/: model_parameters_2400-2800_20241103.pth
checkpoints/policy/: cnn_model_2400.pth  transformer_policy_2400.pth
checkpoints/value/: transformer_value_2400.pth
checkpoints/value/1600/: value_model_epoch_1.pth  value_model_epoch_10.pth  value_model_epoch_2.pth  value_model_epoch_3.pth  value_model_epoch_4.pth  value_model_epoch_5.pth  value_model_epoch_6.pth  value_model_epoch_7.pth  value_model_epoch_8.pth  value_model_epoch_9.pth
checkpoints/value/2000/: value_model_epoch_1.pth  value_model_epoch_10.pth  value_model_epoch_2.pth  value_model_epoch_3.pth  value_model_epoch_4.pth  value_model_epoch_5.pth  value_model_epoch_6.pth  value_model_epoch_7.pth  value_model_epoch_8.pth  value_model_epoch_9.pth
checkpoints/value/2400/: value_model_epoch_1.pth  value_model_epoch_10.pth  value_model_epoch_2.pth  value_model_epoch_3.pth  value_model_epoch_4.pth  value_model_epoch_5.pth  (+4 more)
chess_ai/data/: dataset.py  preprocessing.py
chess_ai/models/: base.py
chess_ai/training/: trainer.py
chess_ai/ui/: base.py  cli.py  jupyter.py  pygame_ui.py
chess_ai/utils/: chess_utils.py
notebooks/: chess_prepare_data.ipynb  chess_transformer_train.ipynb  scratchpad.ipynb
scripts/: decompress_data.py  download_data.py  evaluate.py  mount_data.py  play_cli.py  play_jupyter.py  play_pygame.py  preprocess_data.py  train.py
tests/: test_data_processing.py  test_integration.py  test_model.py  test_training.py  test_ui.py
(+3 files in other folders)
