[tool.poetry]
name = "chess-ai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
chess = "^1.11.1"
click = "^8.1.7"
wandb = "^0.18.7"
numpy = "^2.1.3"
tqdm = "^4.67.0"
pygame = {version = "^2.6.1", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[tool.poetry.extras]
pygame = ["pygame"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
